# crypto

./: .gitignore  CMakeLists.txt  algorithms.py  crypto.cpp  crypto.h  cryptoanalysis.py  generate_train.py  preprocess.py  train.py
data/: alices_adventures_in_wonderland.txt  animal_farm.txt  huck_finn.txt
